# Qt_VideoPlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md  Resource.qrc  VideoPlayer.cpp  VideoPlayer.h  VideoPlayer.ui  main.cpp
